[package]
name = "solana-compliance-relayer"
version = "0.1.0"
edition = "2024"
description = "Compliance-first Solana payment relayer for stablecoin checkout, audit trails, and controlled settlement."
license = "MIT"

[features]
default = []
test-utils = []
real-blockchain = []

[dependencies]
axum = "0.8"
tokio = { version = "1.52", features = ["full", "signal"] }
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "chrono",
    "uuid",
    "migrate",
    "macros",
    "json",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
anyhow = "1.0"
async-trait = "0.1"
dotenvy = "0.15"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.23", features = ["v4", "v7", "serde"] }
reqwest = { version = "0.13", default-features = false, features = ["json", "query", "rustls"] }
tower = { version = "0.5", features = ["util", "timeout", "limit"] }
tower-http = { version = "0.6", features = ["trace", "timeout", "limit", "cors"] }
bs58 = "0.5"
base64 = "0.22"
ed25519-dalek = { version = "2.2", features = ["rand_core"] }
rand = "0.10.1"
sha2 = "0.11"
validator = { version = "0.20", features = ["derive"] }
secrecy = { version = "0.10", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# OpenAPI documentation
utoipa = { version = "5", features = ["axum_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "9", features = ["axum"] }

# Rate limiting  
governor = "0.10.4"

# Thread-safe concurrent HashMap for blocklist
dashmap = "6"

# Binary serialization for Solana transactions
bincode = { version = "2.0.1", features = ["serde"] }

# Solana SDK
solana-sdk = "3.0.0"
solana-client = "3.1.14"
solana-commitment-config = "3.1.1"
solana-system-interface = { version = "3.2.0", features = ["bincode"] }
spl-token = "9.0.0"
solana-program-pack = "3.1.0"
spl-token-interface = "2.0.0"
# spl-token-2022 10.0.0 does not compile with spl-token-group-interface 0.7.2.
spl-token-group-interface = "=0.7.1"
spl-associated-token-account = "8.0.0"
solana-compute-budget-interface = "3.0.0"
bytemuck = "1.25"
spl-token-2022 = "10.0.0"
spl-token-client = "0.18.0"

# ZK Proof Generation for Confidential Transfers
spl-token-confidential-transfer-proof-generation = "0.5.1"
spl-token-confidential-transfer-proof-extraction = "0.5.1"
solana-zk-sdk = "4.0.0"
spl-record = "0.4.0"

[dev-dependencies]
solana-compliance-relayer = { path = ".", features = ["test-utils"] }
http-body-util = "0.1"
tower = { version = "0.5", features = ["util"] }
tokio-test = "0.4"
testcontainers = "0.27"
criterion = { version = "0.8.2", features = ["async_tokio"] }
wiremock = "0.6"

[[bench]]
name = "domain_benchmarks"
harness = false


[lib]
name = "solana_compliance_relayer"
path = "src/lib.rs"
